data path for custom prop is wrong for info menu #63795

Closed
opened 2019-04-22 08:36:43 +02:00 by takeshi funahashi · 16 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 980 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67

Blender Version
Broken: version: 2.80 (sub 58), branch: master, commit date: 2019-04-21 20:30, hash: 797539e76c
Worked: (optional)

Short description of error
When change custom prop value , the info show wrong path of custom properties

  1. open attached file.
    noupdate-driver.blend
    2 .select armature > properties editor>custom properties> change value of "prop" as 0.7 etc
  2. open info menu. then check how it recorded. bpy.context.object.["prop"] = 0.7
  3. but bpy.context.object.["prop"] is wrong path. it should be bpy.context.object["prop"] , should not add "."

wrongpath.JPG

I do not know if it had been reprorted, because same thing happen about current 2.7 build.
and it is only annoying for new user who try to use info , as same as #63686
hope all these missing path will be corrected. (actually I thought if API change about custom property too,,)

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 980 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67 **Blender Version** Broken: version: 2.80 (sub 58), branch: master, commit date: 2019-04-21 20:30, hash: `797539e76c` Worked: (optional) **Short description of error** When change custom prop value , the info show wrong path of custom properties 1. open attached file. [noupdate-driver.blend](https://archive.blender.org/developer/F6966086/noupdate-driver.blend) 2 .select armature > properties editor>custom properties> change value of "prop" as 0.7 etc 3. open info menu. then check how it recorded. **bpy.context.object.["prop"] = 0.7** 4. but bpy.context.object.["prop"] is wrong path. it should be bpy.context.object["prop"] , should not add "." ![wrongpath.JPG](https://archive.blender.org/developer/F6966089/wrongpath.JPG) I do not know if it had been reprorted, because same thing happen about current 2.7 build. and it is only annoying for new user who try to use info , as same as [#63686 ](https://developer.blender.org/T63686) hope all these missing path will be corrected. (actually I thought if API change about custom property too,,) ```

Added subscriber: @TakeshiFunahashi

Added subscriber: @TakeshiFunahashi
takeshi funahashi changed title from path for custom prop data path is wrong for info menu to data path for custom prop is wrong for info menu 2019-04-22 08:39:41 +02:00

Added subscriber: @mel

Added subscriber: @mel

You have an extra . it's bpy.context.object["prop"] or bpy.context.object.prop

Edit: I misread sorry, I can confirm the issue

You have an extra `.` it's `bpy.context.object["prop"]` or `bpy.context.object.prop` Edit: I misread sorry, I can confirm the issue

Yes as you said. bpy.context.object["prop"} is right. then I do not complain about it you already notice. the problem is info window record wrong path.
And thanks confirm. Then It is for user who try to learn bpy with blender bpy documents. But I have not thought there is case , info show wrong path.

Yes as you said. bpy.context.object["prop"} is right. then I do not complain about it you already notice. the problem is info window record wrong path. And thanks confirm. Then It is for user who try to learn bpy with blender bpy documents. But I have not thought there is case , info show wrong path.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking... [think this is isolated to the Info Editor though...]

note: its also not reporting the right object if an object is pinned [will always output bpy.context.object]

Confirmed, checking... [think this is isolated to the Info Editor though...] note: its also not reporting the right object if an object is pinned [will always output `bpy.context.object`]

Thanks. I think, this happen about all custom property. context.scene.[prop] , context.object.active_material.[prop],
context.object.data.["prop"] etc.

Thanks. I think, this happen about all custom property. context.scene.[prop] , context.object.active_material.[prop], context.object.data.["prop"] etc.

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Confirmed' to: 'Needs User Info'

Changed status from 'Confirmed' to: 'Needs User Info'

Checking this now, and it seems that paths are correct now.

Can you please check if this is still an issue in latest build?
https://builder.blender.org/download/

Checking this now, and it seems that paths are correct now. Can you please check if this is still an issue in latest build? https://builder.blender.org/download/
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Still an issue...

Still an issue...

Thanks developer still check old report. I hope to check by myself, about each reports which I opened, but At current I can not get time to pray 3d world with blender. So if it was sloved, please free close this topic. (of couse if it not solved, open as same as before)

Thanks developer still check old report. I hope to check by myself, about each reports which I opened, but At current I can not get time to pray 3d world with blender. So if it was sloved, please free close this topic. (of couse if it not solved, open as same as before)

Added subscriber: @hzuika

Added subscriber: @hzuika

This issue was referenced by 9ec77d709c

This issue was referenced by 9ec77d709c3cd8cc6b210fd4c5fbf762bd18188e

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2022-03-29 15:31:47 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63795
No description provided.