Fix T63795: Display custom properties with brackets in info

When custom properties are changed, they are displayed with brackets in
info.

Ref D14380